inshare-easy file tranfer

--- a/views/download.ejs
+++ b/views/download.ejs
@@ -29,6 +29,7 @@
             <a href="<%= downloadLink %>">Download file</a>
         </div>
         <% } %>
+        <a href="/">Home</a>
     </section>
 
     <!-- github fork button -->
