inshare-easy file tranfer

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -9,7 +9,8 @@
     <title>404 | inShare - Easy file Sharing</title>
 </head>
 <body style="background-image: url('/images/404.jpg'); background-repeat: no-repeat;background-position: center; background-size: contain;">
-    
+    <a href='/'>  <img src="/images/logo.png" alt="Inshare logo" class="logo"/></a>
+
         
    <div class="send-btn-container btn">
             <a href="/">Home</a>
