--- a/public/css/style.css
+++ b/public/css/style.css
@@ -286,20 +286,30 @@ section.download {
 .body{
   display:flex;
   flex-direction: column;
-  justify-content: space-around;
-  
+  margin-top: 55vh;
 }
 .upload-container{
-  width: 80vw;
+  width: 90vw;
   margin-bottom: 50px;
 }
 .drop-zone{
   position: relative;
   width: 70vw;
-  
+  margin: 30px;
 }
 .images{
-  width:80vw;
-  margin-top: 20vh;
+  
+  width: max-content;
+  height: max-content;
+  /* display: none; */
+}
+
+.email-container{
+
+  
+}
+.filed{
+  position: relative;
+  margin-left: 5px;
 }
 }
